compiler/tests/compiler/expected/output/StructTypeError.shtk.txt
MODULE StructTypeError.shtk
ERROR in Line 15 Col 9

    a = b
        ^
Type error, did not expect StructTypeError.shtk::foo, expected StructTypeError.shtk::bar

StructTypeError.shtk:15:8
